--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,21 @@
 body {
-  background-color: black;
   color: aliceblue;
   font-family: Pixelify Sans;
+  background-image: url("https://img.freepik.com/premium-photo/fighting-arena-2d-background-environment-mobile-game-high-quality-horizontal-background-landscape-gaming-template-design-location-generative_159242-19335.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
+
+.container {
+  background: linear-gradient(
+    135deg,
+    rgba(255, 255, 255, 0.075),
+    rgba(0, 0, 0, 0.068)
+  );
+  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(10px);
+}
+
 .main {
   display: flex;
   margin: auto;
@@ -12,6 +25,7 @@ body {
 
 h1 {
   text-align: center;
+  text-shadow: 3px 5px rgb(110, 14, 54);
 }
 
 #attack1,
@@ -26,7 +40,7 @@ h1 {
 
 #atkbtn1,
 #atkbtn2 {
-  background-color: crimson;
+  background-color: orangered;
   outline: none;
   border: none;
   padding: 10px;
@@ -40,7 +54,7 @@ h1 {
 
 #hlbtn1,
 #hlbtn2 {
-  background-color: gold;
+  background-color: lightsalmon;
   outline: none;
   border: none;
   padding: 10px;
@@ -64,7 +78,7 @@ h1 {
   border-radius: 20px;
   font-size: larger;
   font-family: Pixelify Sans;
-  background-color: lime;
+  background-color: springgreen;
   font-weight: bolder;
   outline: none;
   border: none;
@@ -72,5 +86,63 @@ h1 {
 
 #random {
   width: 5cm;
-  background-color: deeppink;
+  background-color: rgb(69, 209, 69);
+}
+
+@media screen and (max-width: 616px) {
+  .container {
+    padding: 50px;
+  }
+
+  img {
+    height: 200px;
+    width: 200px;
+  }
+
+  #attack1,
+  #heal1 {
+    margin-left: 40px;
+  }
+
+  #attack2,
+  #heal2 {
+    margin-left: 40px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .container {
+    padding: 30px;
+  }
+
+  img {
+    height: 180px;
+    width: 180px;
+  }
+
+  #attack1,
+  #heal1 {
+    margin-left: 30px;
+  }
+
+  #attack2,
+  #heal2 {
+    margin-left: 30px;
+  }
+}
+
+@media screen and (max-width: 410px) {
+  .container {
+    padding: 30px;
+  }
+
+  img {
+    height: 150px;
+    width: 150px;
+  }
+
+  #attack2,
+  #heal2 {
+    margin-left: 10px;
+  }
 }
